changed IDs to be dynamic for generation of modals

--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -86,16 +86,16 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
-          <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
+          <h4 data-id={{this.article_id}} id="article-id" class="post-modal-title">{{this.headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
           <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input"
             required></textarea>
@@ -114,14 +114,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -142,14 +142,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -170,14 +170,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -198,14 +198,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -226,14 +226,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -254,14 +254,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -282,14 +282,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -310,14 +310,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -338,14 +338,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -366,14 +366,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -394,14 +394,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -422,14 +422,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -450,14 +450,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
@@ -478,14 +478,14 @@
             {{headline}}
           </a>
         </h4>
-        <button data-open="postModal">
+        <button data-open="postModal{{article_id}}">
           <i class="fa-solid fa-square-plus custom-plus"></i>
         </button>
       </div>
       <div class="card-section">
         <p>{{short_description}}</p>
       </div>
-      <div class="reveal post-modal" id="postModal" data-reveal>
+      <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
         <form class="post-modal">
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title" required>
