--- a/views/teamDashboard.handlebars
+++ b/views/teamDashboard.handlebars
@@ -18,7 +18,8 @@
                 </div>
                 <div class="card-footer">
                     <div class="team-post-user">
-                        <p>- <a class= "form-link" href="/teamDashboard/{{username}}">{{username}}</a>, {{format_date_time updated_at}}</p>
+                        <p>- <a class="form-link" href="/teamDashboard/{{username}}">{{username}}</a>,
+                            {{format_date_time updated_at}}</p>
                     </div>
                     <div class="team-post-comments">
                         <div class="comment-container">
