--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -1,11 +1,10 @@
-<p><button class="form-btn" data-open="preferencesModal">Add your preferences</button></p>
 <div class="reveal preferences-modal" id="preferencesModal" data-reveal>
   <div class="card-divider preferences-modal-title">
-    <h5>Preferences</h5>
+    <h3 class="preferences-modal-title">Preferences</h3>
   </div>
   <div>
     <fieldset class="large-6 cell card-section preferences-modal-values">
-      <p>Select which categories you prefer to read about</p>
+      <p>Select which categories you prefer to read about:</p>
       <input id="checkbox1" type="checkbox" value="1"><label for="checkbox1">Sports</label>
       <input id="checkbox2" type="checkbox" value="2"><label for="checkbox2">Politics</label>
       <input id="checkbox3" type="checkbox" value="3"><label for="checkbox3">Wellness</label>
@@ -25,9 +24,12 @@
     <button type="submit" class="form-btn" id="select-preferences-btn">Submit</button>
   </div>
 </div>
-<h3 class="user-dashboard-title">
-  Your news for the day
-</h3>
+<div class="user-dash-title-wrap">
+  <h2 class="user-dashboard-title">
+    Your news for the day
+  </h2>
+  <p><button class="form-btn" data-open="preferencesModal">Add your preferences</button></p>
+</div>
 
 <ul class="tabs tabs-title-container" data-tabs id="news-tabs">
   {{#if sportsArticles}}
