removed white borders from everything on userDashboard page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -429,6 +429,7 @@ p {
 
 .preferences-modal {
     background-color: var(--black);
+    border: 1px solid var(--black);
 }
 
 .user-dash-title-wrap {
@@ -467,6 +468,7 @@ p {
 
 .post-modal {
     background-color: var(--black);
+    border: 1px solid var(--off-black);
 }
 
 .post-modal-title {
@@ -519,7 +521,28 @@ p {
 }
 
 .tabs-title {
+    background-color: var(--off-black);
+}
+
+.tabs-title a:link {
     color: var(--theme);
+    font-weight: var(--rubik-bold);
+}
+
+.tabs-title a:visited {
+    color: var(--theme);
+    font-weight: var(--rubik-bold);
+}
+
+.tabs-title a:hover {
+    background-color: var(--theme);
+    color: var(--black);
+    font-weight: var(--rubik-bold);
+}
+
+.tab-title a:active {
+    background-color: var(--theme);
+    color: red;
     font-weight: var(--rubik-bold);
 }
 
