--- a/views/userDashboard.handlebars
+++ b/views/userDashboard.handlebars
@@ -36,7 +36,7 @@
   <li class="tabs-title"><a href="#sports">Sports</a></li>
   {{/if}}
   {{#if politicsArticles}}
-  <li class="tabs-title "><a href="#politics">Politics</a></li>
+  <li class="tabs-title" id="tabs-title"><a href="#politics">Politics</a></li>
   {{/if}}
   {{#if wellnessArticles}}
   <li class="tabs-title"><a href="#wellness">Wellness</a></li>
@@ -96,7 +96,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -125,7 +125,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -154,7 +154,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -183,7 +183,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -212,7 +212,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -241,7 +241,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -270,7 +270,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -299,7 +299,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -328,7 +328,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -357,7 +357,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -386,7 +386,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -415,7 +415,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -444,7 +444,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
@@ -473,7 +473,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}" required>
           <textarea type="text" placeholder="Enter your post here" class="form-input" name="post-input{{article_id}}"
@@ -501,7 +501,7 @@
         <p>{{short_description}}</p>
       </div>
       <div class="reveal post-modal" id="postModal{{article_id}}" data-reveal>
-        <form class="post-modal">
+        <form>
           <h4 data-id={{article_id}} id="article-id" class="post-modal-title">{{headline}} </h4>
           <input type="text" placeholder="Enter your post title here" class="form-input" name="post-title{{article_id}}"
             required>
