Changed logout page message. Added styles for a single news preference to separate the button from the article title

--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -9,9 +9,9 @@
                     <img class="logout-page-img" src="/images/logoutPage-unsplash-bacila-vlad.jpg">
                 </div>
                 <div class="logout-pg-text">
-                    <h6>Sorry that you're leaving, but we know you'll be back!</h6>
-                    <h6>Have a nice day!</h6>
-                    <h6>-TeamSpeak</h6>
+                    <h4>Sorry that you're leaving, but we know you'll be back.</h4>
+                    <h4>See you soon!</h4>
+                    <h5><i class="fa-regular fa-heart"></i>, The team at TeamSpeak</h5>
                 </div>
             </div>
         </div>
